--- a/ceo_app/.env.example
+++ b/ceo_app/.env.example
@@ -24,6 +24,7 @@ GOOGLE_CLIENT_SECRET=
 # -----------------------------------------------------------------------------
 DATABASE_URL=
 TENANT_NAME=Nautis
+NEXT_PUBLIC_TENANT_SLUG=nautis
 
 # -----------------------------------------------------------------------------
 # API
