--- a/ceo_app/package.json
+++ b/ceo_app/package.json
@@ -35,6 +35,8 @@
     "@mui/material-nextjs": "6.2.1",
     "@reduxjs/toolkit": "2.5.0",
     "@tanstack/match-sorter-utils": "8.19.4",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-table": "8.20.6",
     "@tiptap/extension-color": "^2.10.4",
     "@tiptap/extension-list-item": "^2.10.4",
@@ -46,6 +48,7 @@
     "@tiptap/react": "^2.10.4",
     "@tiptap/starter-kit": "^2.10.4",
     "apexcharts": "3.49.0",
+    "axios": "^1.12.2",
     "bootstrap-icons": "1.11.3",
     "classnames": "2.5.1",
     "cmdk": "1.0.4",
@@ -57,7 +60,7 @@
     "mapbox-gl": "3.9.0",
     "negotiator": "1.0.0",
     "next": "^15.5.4",
-    "next-auth": "4.24.11",
+    "next-auth": "^4.24.11",
     "react": "18.3.1",
     "react-apexcharts": "1.4.1",
     "react-colorful": "5.6.1",
