--- a/ceo_app/tsconfig.json
+++ b/ceo_app/tsconfig.json
@@ -49,7 +49,8 @@
       "@views/*": [
         "./src/views/*"
       ]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": [
     "next.config.ts",
@@ -57,7 +58,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/types/**/*.d.ts"
   ],
   "exclude": [
     "node_modules"
