--- a/ceo_app/.env.example
+++ b/ceo_app/.env.example
@@ -8,8 +8,8 @@ NEXT_PUBLIC_DOCS_URL=https://demos.pixinvent.com/vuexy-nextjs-admin-template/doc
 # -----------------------------------------------------------------------------
 # Authentication (NextAuth.js)
 # -----------------------------------------------------------------------------
-NEXTAUTH_BASEPATH=${BASEPATH}/api/auth
-NEXTAUTH_URL=http://localhost:3000${BASEPATH}/api/auth
+NEXTAUTH_BASEPATH=${BASEPATH}//auth-next
+NEXTAUTH_URL=http://localhost:3000${BASEPATH}//auth-next
 NEXTAUTH_SECRET=
 
 NODE_ENV=development
