some minor fixes

--- a/ceo_app/.env.example
+++ b/ceo_app/.env.example
@@ -36,3 +36,8 @@ NEXT_PUBLIC_API_URL=${API_URL}
 # Mapbox
 # -----------------------------------------------------------------------------
 MAPBOX_ACCESS_TOKEN=
+
+# -----------------------------------------------------------------------------
+# Others
+# -----------------------------------------------------------------------------
+MINION=true
