--- a/ceo_api/.env.example
+++ b/ceo_api/.env.example
@@ -3,6 +3,7 @@ NODE_ENV=development
 PORT=9832
 API_PREFIX=api
 FRONTEND_URL=http://localhost:3000
+API_URL=http://localhost:9832
 
 # Database
 DB_HOST=localhost
