console clean && docker first deploy setup

--- a/ceo_app/.env.example
+++ b/ceo_app/.env.example
@@ -1,14 +1,13 @@
 # -----------------------------------------------------------------------------
 # App
 # -----------------------------------------------------------------------------
-BASEPATH=
-NEXT_PUBLIC_APP_URL=http://localhost:3000${BASEPATH}
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # -----------------------------------------------------------------------------
 # Authentication (NextAuth.js)
 # -----------------------------------------------------------------------------
-NEXTAUTH_BASEPATH=${BASEPATH}//auth-next
-NEXTAUTH_URL=http://localhost:3000${BASEPATH}//auth-next
+NEXTAUTH_BASEPATH=/auth-next
+NEXTAUTH_URL=http://localhost:3000/auth-next
 NEXTAUTH_SECRET=
 
 NODE_ENV=development
@@ -28,7 +27,7 @@ NEXT_PUBLIC_TENANT_SLUG=nautis
 # -----------------------------------------------------------------------------
 # API
 # -----------------------------------------------------------------------------
-API_URL=http://localhost:3000${BASEPATH}/api
+API_URL=http://localhost:3000/api
 NEXT_PUBLIC_API_URL=${API_URL}
 
 # -----------------------------------------------------------------------------
