--- a/ceo_app/tsconfig.json
+++ b/ceo_app/tsconfig.json
@@ -50,7 +50,10 @@
         "./src/views/*"
       ]
     },
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ]
   },
   "include": [
     "next.config.ts",
