--- a/ceo_api/package.json
+++ b/ceo_api/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.3",
     "mssql": "^12.0.0",
+    "nodemailer": "^7.0.10",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -49,6 +50,7 @@
     "@types/mssql": "^9.1.8",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.2",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^11.0.0",
     "eslint": "^9.18.0",
