--- a/ceo_app/package.json
+++ b/ceo_app/package.json
@@ -80,6 +80,7 @@
     "react-use": "17.6.0",
     "recharts": "2.15.0",
     "server-only": "0.0.1",
+    "swiper": "^12.0.3",
     "valibot": "0.42.1"
   },
   "devDependencies": {
