--- a/ceo_api/env/.env.antoniosergio
+++ b/ceo_api/env/.env.antoniosergio
@@ -1,28 +1,19 @@
-# Application
 NODE_ENV=development
-PORT=9832
+PORT=9833
 API_PREFIX=api
-FRONTEND_URL=http://localhost:3000
-API_URL=http://localhost:9832
-
-# Database
-DB_HOST=localhost
-DB_PORT=1433
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+API_URL=http://localhost:9833/api
+DB_HOST=62.28.239.206
+DB_PORT=4002
 DB_USER=sa
-DB_PASSWORD=YourStrongPassword123
-DB_MAIN_NAME=CEO_Main
+DB_PASSWORD=MicroLop3s@2025!
+DB_MAIN_NAME=ceo_main
 DB_ENCRYPT=false
 DB_TRUST_CERT=true
-
-# JWT
 JWT_SECRET=Q4z2GJvD8tYpC7aM1rF9xLwZ5kHnU0sB
 JWT_EXPIRES_IN=24h
 JWT_REFRESH_SECRET=Xy8pQ1aLz0RwTf5J
 JWT_REFRESH_EXPIRES_IN=7d
-
-# Upload
 UPLOAD_MAX_SIZE=10485760
 UPLOAD_PATH=./uploads
-
-# Logging
 LOG_LEVEL=debug
